<resources>
    <string name="app_name">QRCodeScanner</string>
    <string name="playground">P L A Y G R O U N D</string>
    <string name="title_social">SOCIAL</string>
    <string name="title_sports">SPORTS</string>
    <string name="title_club">CLUB</string>
    <string name="scan_code_button_text">Scan code</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="profileimage">ProfileImage</string>
    <string name="membership">Membership</string>
    <string name="status">Status</string>
    <string name="test_date">22/10/2018</string>
    <string name="dashboard_profile_title">User Profile</string>
    <string name="scan_again">Scan code again</string>
    <string name="image_protrait">https://svgur.com/s/EcH</string>
</resources>
