<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="mainViewModel"
            type="com.hpmtutorial.qrcodescanner.viewmodel.MainViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.MainActivity">

        <ImageView
            android:id="@+id/imageView_portrait"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_energizer"
            android:layout_margin="8dp"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/imageView_portrait"
            android:layout_marginTop="24dp"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/keep_calm"
            android:text="@string/playground"
            android:textColor="@android:color/black"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/keep_calm"
            android:text="@string/title_social"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_below="@id/textView2"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/keep_calm"
            android:text="@string/title_sports"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView3"
            android:layout_marginStart="16dp"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/keep_calm"
            android:text="@string/title_club"
            android:textColor="@android:color/black"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/profile_scan_button"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:background="@drawable/black_button"
            android:backgroundTint="@android:color/black"
            android:fontFamily="@font/keep_calm"
            android:text="@string/scan_code_button_text"
            android:textColor="@android:color/white"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="24dp"
            android:elevation="2dp"
            android:onClick="@{()->mainViewModel.onScanClick()}"/>

    </RelativeLayout>
</layout>